2000-04-11  Fernando Nasser  <fnasser@cygnus.com>

	* wrapper.h: Remove definitions of internal functions.
	* wrapper.c: Remove definitions of exported functions (which are
	already in wrapper.h) and make static all internal wrap_* functions.

Mon Apr 10 21:58:36 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* acconfig.h (USE_INCLUDED_REGEX): Add.
	* Makefile.in (REGEX_CFLAGS): Delete
	* configure.in (REGEX_CFLAGS): Delete. Use AC_DEFINE instead.
	* configure, config.in: Re-generate.

2000-04-10  Philip Blundell <philb@gnu.org>

	* arm-linux-nat.c (arm_skip_solib_resolver): Remove and move to
	arm-linux-tdep.c.
	* arm-linux-tdep.c (arm_skip_solib_resolver): New.

2000-04-10  Fernando Nasser  <fnasser@cygnus.com>

	From 2000-04-10 Rodney Brown <rdb@redhat.com>:
	* command.h (enum command_class): Remove trailing "," to placate
	AIX xlc.

Mon Apr 10 20:17:32 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO, NEWS: Update.  Mention MI.

Mon Apr 10 00:21:09 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* gdbarch-utils.h, gdbarch-utils.c: Delete.
	* arch-utils.h, arch-utils.c: New files.  Avoid 14 character file
 	name problems.
	* Makefile.in: Update.
	* gdbarch.c: Update.

Sun Apr  9 23:42:16 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From 2000-04-07 Jonathan Larmour <jlarmour@redhat.co.uk>:
	* mips-tdep.c (saved_gpreg_size_enums): Define enum command for
	new "set mips saved-gpreg-size" command
	(MIPS_SAVED_REGSIZE): Now a function mips_saved_regsize()
	(MIPS_DEFAULT_SAVED_REGSIZE): Define for default MIPS_SAVED_REGSIZE,
	either from target, or gdb multi-arch
	(show_mips_command): New. For "show mips" prefix command
	(set_mips_command): New. For "show mips" prefix command
	(_initialize_mips_tdep): Add top-level mips prefix command
	Add "set mips saved-gpreg-size" command

	* mips-tdep.c (struct gdbarch_tdep): Rename mips_saved_regsize to
 	mips_default_saved_regsize.
	(mips_gdbarch_init): Update.
	(MIPS_DEFAULT_SAVED_REGSIZE): Update.