@@ -1,3 +1,9 @@
+2000-04-12  Mark Kettenis  <kettenis@gnu.org>
+
+	* i387-tdep.c (print_i387_value): Avoid call to
+	floatformat_to_doublest if long double type is the same on host
+	and target.
+
 2000-04-11  Fernando Nasser  <fnasser@cygnus.com>
 
 	* wrapper.h: Remove definitions of internal functions.
